# pysaurus

./: .flake8  .gitignore  ANALYSE_UPDATE_ALGORITHM.md  CLAUDE.md  NICEGUI_MIGRATION_PLAN.md  README.md  database.graphml  journal.md  layers.graphml  plan.md  pyproject.toml  remakrs-linux.md  requirements.txt  setup.cfg  setup.py  similarities.css  similarities.json  todo.md
.html/: similarities.css
docs/: about_filecopier.md  audit_api_features.md  audit_backend_methods.md  audit_blocking.md  audit_pyside6_coverage.md  audit_state_effects.md  backlog.md  competitive-analysis.md  flask-design.md  flask-vs-pyside6.md  notes.md  plan_auto_refresh.md  provider-refactoring-plan.md  pysaurus_with_searchexp.md  report.md  searchexp.design.md  searchexp.spec.md  state_contracts.md  strategic-direction.md  suggestions.md  todo.md  website-plan.md
imgsimsearch/: approximate_comparator_annoy.py  native_fine_comparator.py  python_fine_comparator.py
legacy/: fake_video.py  parallel_notifier.py
other/: journal.md  pyproject.toml
other/adnoide/: adnoide.py
other/bad_saurus/gui/: frontend.py  html_factory.py  theria.py
other/imgsimsearch/: __init__.py  approximate_comparator.py  approximate_comparator_annoy.py  common.py  native_fine_comparator.py  python_fine_comparator.py  utils.py
other/imgsimsearchother/: approximate_comparator.py  native_fine_comparator.py  utils.py
other/legacy/: parallel_notifier.py
other/legacy/pysaurus/database/: db_settings.py  jobs_python.py
other/legacy/pysaurus/database/video_similarities/: backend_numba_numpy.py  backend_numpy.py
other/legacy/pysaurus/miniature/: decomposed_miniature.py  group_computer.py  legacy_miniatures.py  pixel_comparator.py
other/legacy/pysaurus/video_similarities/: backend_python.py
other/legacy/pysaurus/video_similarities/alignment_raptor/: alignment.py  symbols.py
other/legacy/saurus/: data.py
other/legacy/video_raptor_cpp/: abstract_video_raptor.py  video_raptor_native.py
other/other_tests/: _gen_noto_fonts_folder.py  animated_webp_to_gif.py  compare_dbs.py  db_thumbs_to_imgs.py  extract_specific_thumbs.py  local_image_provider.py  multi-support.txt  multiple_support.json  similarity_checker.py  test_experimental.py  test_pysaurus.py  test_source_def.py  test_video_server.py  try.py  try_annoy.py  try_annoy_simple.py  try_api.py  try_condlang_on_database.py  try_dearpygui.py  try_finding_similarities.py  try_flet.py  try_group_computer.py  try_image_segmentation.py  try_kivy.py  try_load_many_json_files.py  try_notifier.py  try_pil_to_numpy.py  try_pygame.py  try_pysaurus_collection.py  try_similarities.py  try_sql_database.py  try_sqlite_fts.py  try_unicode.py
other/other_tests/saurus_tests/: english.txt  tab_to_list.py  test_language.py
other/pyguisaurus/: _h_scroll_bar.py  _v_scroll_bar.py  colors.py  container.py  enumerations.py  events.md  events.py  pygame_font_factory.py  scrollview.py  text.py  try_pygame.py  utils.py  widget.py  window.py
other/pyguisaurus/containers/: column.py  container.py  scrollview.py  zone.py
other/pyguisaurus/containers/scrollwidget/: _h_scroll_bar.py  _scroll_background.py  _v_scroll_bar.py  scrollview.py
other/pyguisaurus/utils/: events.py  mouse_ownership.py  pygame_font_factory.py  pygame_utils.py  utils.py
other/pyguisaurus/widgets/: _h_scroll_bar.py  _v_scroll_bar.py  area.py  button.py  text.py  widget.py
other/resource/: er_model.graphml
other/saurus/gui/: frontend.py  html_factory.py  qt.js  theria.py
other/saurus/sql/: application.py  video_database.py
other/saurus/tests/: ask_database.py  old_to_new_data.py  test_theria.py  try_application.py
other/scripts/: old_to_new_data.py
other/scripts/pyinstaller/: run.spec
other/supertk/: README.md  constants.py  event.py  run_supertk.py  scrollable_frame.py  supertk.py  tutorial_progressbar.py  window.py
other/supertk/test_supertk/: test_supertk.py
other/tests/: compress.py  db_thumbs_to_imgs.py  extract_specific_thumbs.py  find_animated_images.py  local_image_provider.py  similarity_checker.py  test_functions.py  test_integer_presence.py  test_json_parser.py  test_jsonable.py  test_lookup_array.py  test_override.py  test_pysaurus.py  test_pysaurus_collection.py  test_scope.py  test_semantic_text.py  test_source_def.py  test_symbolism.py  test_unpack_args.py  test_video_server.py  test_works.py  try.py  try_annoy.py  try_api.py  try_condlang_on_database.py  try_finding_similarities.py  try_group_computer.py  try_image_segmentation.py  try_load_many_json_files.py  try_near_average.py  try_pil_to_numpy.py  try_pysaurus_collection.py  try_sub_class.py  utils_testing.py
other/tests/bad_saurus/: ask_database.py  test_theria.py
other/tests/saurus_tests/: old_to_new_data.py  tab_to_list.py
other/toolsaurus/: abstract_json.py  classes.py  command_line_interface.py  function_parser.py  functions.py  jsonable.py  modules.py  override.py  printable.py  symbolism.py
other/toolsaurus/application/: closing_application.py
other/toolsaurus/console/: run.py
other/toolsaurus/database/: __init__.py  database.py  db_cache.py
other/toolsaurus/database/miniature_tools/: pixel_comparator.py
other/toolsaurus/database/video_info/: backend_pyav.py
other/toolsaurus/database/video_similarities/: backend_python.py
other/toolsaurus/database/viewport/: video_provider.py
other/toolsaurus/database/viewport/layers/: classifier_layer.py  group_layer.py  grouping_layer.py  layer.py  search_layer.py  sort_layer.py  source_layer.py
other/toolsaurus/interface/api/: unused_parallel_notifier.py
other/toolsaurus/other_video/: video.py  video_runtime_info.py
other/toolsaurus/qt_web_view/: player.py  pyqtapp_with_embedded_player.py
other/toolsaurus/scripts/: try_machine_learning.py
other/toolsaurus/server/: common.py
other/trash_pyguisaurus/: pygame_event_manager.py
pyraptor/: absolute_path.py  extensions.txt  profiling.py  run_pyraptor.py  utils.py  video.py  videoraptor.py
pysaurus/: __init__.py  __main__.py  application.py  database.py  duration.py  features.py  html_stripper.py  main.py  (+10 more)
(+1687 files in other folders)
