[project]
name = "pysaurus"
version = "0.1.0"
description = "Video collection manager"
authors = [{ name = "notoraptor" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "moviepy>=2.1.2",
    "Pillow>=11.3.0",
    "ujson>=5.10.0",
    "Flask>=3.1.0",
    "av>=15.0.0",
    "show-in-file-manager>=1.1.5",
    "werkzeug>=3.1.3",
    "flet>=0.27.6",
    "pyside6>=6.9.0",
    "annoy>=1.17.3",
    "chardet>=5.2.0",
    "pyperclip>=1.9.0",
    "pywebview>=5.4",
    "strarr>=0.1.1",
    "ovld>=0.5.11",
    "filedial>=0.1.0",
    "videre",
    "filelock>=3.19.1",
    "matplotlib>=3.10.6",
    "skullite",
    "nicegui>=3.6.1",
]

[dependency-groups]
dev = [
    "pyfakefs>=5.10.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-regressions>=2.8.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.11",
    "selenium>=4.25.0",
]

[tool.uv.sources]
videre = { path = "../videre", editable = true }
skullite = { path = "../skullite", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
# Do not complain about unused imports in __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.format]
# Collapse lines even if they contain commas
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# NiceGUI testing configuration
main_file = "pysaurus/interface/nicegui/main.py"
