[project]
name = "pysaurus"
version = "0.1.0"
description = "Video collection manager"
authors = [{ name = "notoraptor" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "pillow>=12.1.1",
    "ujson>=5.10.0",
    "Flask>=3.1.0",
    "av>=15.0.0",
    "show-in-file-manager>=1.1.5",
    "werkzeug>=3.1.3",
    "pyside6>=6.9.0",
    "chardet>=5.2.0",
    "pyperclip>=1.9.0",
    "pywebview>=5.4",
    "strarr>=0.1.1",
    "ovld>=0.5.11",
    "filedial>=0.1.0",
    "videre",
    "filelock>=3.19.1",
    "matplotlib>=3.10.6",
    "skullite",
    "send2trash>=1.8.3",
    "fire>=0.7.0",
    "pyyaml>=6.0.2",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.42.1",
    "pyfakefs>=5.10.2",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "pytest-regressions>=2.8.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.11",
    "selenium>=4.25.0",
]

[tool.uv.sources]
videre = { path = "../videre", editable = true }
skullite = { path = "../skullite", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
# Do not complain about unused imports in __init__ files.
"__init__.py" = ["F401"]

[tool.ruff.format]
# Collapse lines even if they contain commas
skip-magic-trailing-comma = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    'raise NotImplementedError',
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
# Make strict distinction between T and T | None
strict_optional = true
check_untyped_defs = true

[tool.poe.tasks]
format = "ruff format"
lint = "ruff check --fix"
typecheck = "mypy pysaurus/core/searchexp"
check = ["format", "lint", "typecheck"]
