[metadata]
name = pysaurus
version = 0.0.1
author = notoraptor
author_email = stevenbocco@gmail.com
description = Video collection manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/notoraptor/pysaurus
project_urls =
    Bug Tracker = https://github.com/notoraptor/pysaurus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pysaurus
packages = find:
python_requires = ==3.8

[options.packages.find]
where = pysaurus
