[tool.poetry]
name = "pysaurus-other"
version = "0.1.0"
description = "legacy and trial codes"
authors = ["notoraptor <notoraptor@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pysaurus_other"}]

[tool.poetry.dependencies]
python = "^3.8"
annoy = "^1.17.3"
numba = "0.58.0"
nmslib = "^2.1.1"
imagehash = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
